# windows-nt-4

./: .gitignore  README.md  makecd.cmd
CD/: AUTORUN.INF
Src/: .gitattributes  .gitignore  TODO.txt  clean.cmd  compile.cmd  makediffs.cmd
Src/7z2106/: .gitignore  make.cmd
Src/7z2106/C/: Threads.c  Threads.h
Src/_autorun/: CMakeLists.txt  autorun.c  nuklgdi.h
Src/_ntcompat/: CMakeLists.txt  hardlink.cpp  secure.c  thread.c  wspiapi.c
Src/_ntcompat/ntcompat/: crt.h  errno.h  ntcompat.h  windows.h
Src/_ntcompat/windows/: ntcompat.h
Src/_setup/: licenses.txt  path.nsh  setup.ini  setup.nsi
Src/_setup/git/: setup.ini  setup.nsi
Src/_setup/perl/: setup.ini  setup.nsi
Src/_setup/putty/: setup.ini  setup.nsi
Src/bzip2-1.0.8/: Makefile  Makefile-libbz2_so  bzip2.c  bzip2recover.c
Src/cacert/: .gitattributes  readme.txt
Src/cmake-3.5.2/: CMakeLists.txt
Src/cmake-3.5.2/Source/: cmGlobalMinGWMakefileGenerator.cxx  cmGlobalVisualStudio6Generator.cxx  cmGlobalVisualStudio7Generator.cxx  cmLocalUnixMakefileGenerator3.cxx  cmState.cxx  cmState.h  cmSystemTools.cxx
Src/curl-7.80.0/: CMakeLists.txt
Src/curl-7.80.0/lib/: CMakeLists.txt  curl_addrinfo.c
Src/curl-7.80.0/src/: CMakeLists.txt  tool_doswin.c  tool_operate.c
Src/expat-2.4.2/: CMakeLists.txt
Src/far-3.0.5956.2725/far/: config.cpp  config.hpp  console.cpp  dbghelp.h  diskmenu.cpp  elevation.cpp  exception_handler.cpp  exception_handler.hpp  execute.cpp  fileattr.cpp  filefilter.cpp  fileowner.cpp  hook_wow64.cpp  hotplug.cpp  imports.cpp  imports.hpp  main.cpp  platform.chrono.cpp  platform.com.cpp  platform.com.hpp  platform.concurrency.cpp  platform.cpp  platform.fs.cpp  platform.headers.hpp  platform.version.cpp  platform.version.hpp  plist.cpp  stddlg.cpp  taskbar.cpp  wm_listener.cpp
Src/git-2.34.1/: banned.h  color.c  color.h  common-main.c  connect.c  daemon.c  editor.c  exec-cmd.c  generate-cmdlist.sh  git-compat-util.h  git.c  git.rc  http.c  ident.c
Src/git-2.34.1/_doc/: MyFirstContribution.html  MyFirstObjectWalk.html  SubmittingPatches.html  everyday.html  git-add.html  git-am.html  git-annotate.html  git-apply.html  git-archive.html  git-bash.html  git-bisect-lk2009.html  git-bisect.html  git-blame.html  git-branch.html  git-bugreport.html  git-bundle.html  git-cat-file.html  git-check-attr.html  git-check-ignore.html  git-check-mailmap.html  git-check-ref-format.html  git-checkout-index.html  git-checkout.html  git-cherry-pick.html  git-cherry.html  git-citool.html  git-clean.html  git-clone.html  git-column.html  git-commit-graph.html  git-commit-tree.html  git-commit.html  git-config.html  git-count-objects.html  git-credential-cache--daemon.html  git-credential-cache.html  git-credential-store.html  git-credential.html  git-daemon.html  git-describe.html  (+147 more)
Src/git-2.34.1/builtin/: gc.c
Src/git-2.34.1/compat/: main.c  mingw.c  mingw.h  win32mmap.c  winansi.c
Src/less-590/: configure  main.c  screen.c
Src/libiconv-1.16/: Makefile.devel  configure
Src/libiconv-1.16/build-aux/: ltmain.sh
Src/libiconv-1.16/lib/: Makefile.in  relocatable.c
Src/libiconv-1.16/libcharset/: Makefile.devel  configure
Src/libiconv-1.16/m4/: cp.m4  libtool.m4
Src/libiconv-1.16/po/: Makefile.in.in
Src/libiconv-1.16/src/: Makefile.in
Src/libiconv-1.16/srclib/: Makefile.in  relocatable.c
Src/libiconv-1.16/srcm4/: lib-link.m4
Src/libssh2-1.10.0/: CMakeLists.txt
Src/ncurses-6.3/: Makefile.in  configure  mk-1st.awk
Src/ncurses-6.3/form/: Makefile.in  fty_regex.c
Src/ncurses-6.3/include/: nc_mingw.h  nc_win32.h
Src/ncurses-6.3/misc/: Makefile.in  chkdef.cmd  cleantic.cmd  cmpdef.cmd  gen_edit.sh  makedef.cmd  run_tic.in
Src/ncurses-6.3/package/: mingw-ncurses.nsi
Src/ncurses-6.3/progs/: tic.c
Src/openssh-8.6/: .gitignore  CMakeLists.txt  atomicio.c  auth-pam.c  auth.c  auth2.c  authfile.c  channels.c  cipher-ctr.c  cleanup.c  clientloop.c  config.h  dh.c  gss-genr.c  hostfile.c  includes.h  kex.c  kexgexs.c  log.h  misc.c  misc.h  mux.c  nchan.c  packet.c  pathnames.h  progressmeter.c  readconf.c  readpass.c  scp.c  sftp-client.c  sftp.c  sk-usbhid.c  ssh-add.c  ssh-keygen.c  ssh-sk-client.c  ssh.c  sshbuf-io.c  sshconnect.c  sshconnect2.c  sshd.c  (+2 more)
Src/openssh-8.6/contrib/win32/install/: client.wxs  openssh.wixproj  product.wxs  server.wxs  shared.wxs
Src/openssh-8.6/contrib/win32/openssh/: GetFIDO2.ps1  MicrosoftTelemetry.h  OpenSSHBuildHelper.psm1  README.txt  Win32-OpenSSH.sln  config.h.vs  config.vcxproj  paths.targets  ssh-sk-helper.vcxproj  sshTelemetry.c  sshTelemetry.h  sshTelemetryInternal.h  win32iocompat.vcxproj  win32iocompat.vcxproj.filters
Src/openssh-8.6/contrib/win32/win32compat/: fileio.c  gss-sspi.c  misc.c  misc_internal.h  pwd.c  signal.c  signal_wait.c  socketio.c  spawn-ext.c  spawn.c  strlcat.c  strlcpy.c  termio.c  ttymodes_windows.c  utf.c  w32-doexec.c  w32-sshfileperm.c  w32api_proxies.h  w32fd.c  w32fd.h  w32log.c  win32-utf8.c  win32_groupaccess.c  win32_sshpty.c  win32_usertoken_utils.c  wmain_sshd.c
Src/openssh-8.6/contrib/win32/win32compat/inc/: fcntl.h  gssapi.h  poll.h  string.h  unistd.h
Src/openssh-8.6/contrib/win32/win32compat/inc/sys/: stat.h  time.h  types.h
Src/openssh-8.6/contrib/win32/win32compat/ssh-agent/: agent.c  keyagent-request.c
Src/openssh-8.6/openbsd-compat/: arc4random.c  bindresvport.c  bsd-getline.c  bsd-poll.c  glob.c  glob.h  inet_ntop.c  mktemp.c  rresvport.c
Src/openssh-8.6/regress/unittests/win32compat/: file_tests.c  miscellaneous_tests.c  socket_tests.c
Src/openssl-1.1.1m/: .gitignore  Configure  build.info
Src/openssl-1.1.1m/Configurations/: 00-base-templates.conf  10-main.conf  unix-Makefile.tmpl
Src/openssl-1.1.1m/crypto/: init.c
Src/pcre2-10.39/: CMakeLists.txt
Src/perl-5.12.3.0-bin/: DISTRIBUTIONS.txt  README.txt  portable.perl
Src/putty-0.76/: defs.h  sshaes.c  sshsh256.c  sshsh512.c  sshsha.c
Src/putty-0.76/icons/: pageant-128-mono.pam  pscp-16.pam  (+69 more)
Src/wzsh/: .gitignore
Src/zlib-1.2.11/: CMakeLists.txt
Toolchain/CDRTOOLS/: AN-2.01  README.win32  cdrecord  cdrecord.mak  macfiles.txt
(+1273 files in other folders)
